# docs-hub

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml  ruff.toml
backend/app/api/: auth.py  health.py  routers.py
backend/app/core/settings/: fast_api.py  settings.py
backend/app/schemas/: __init__.py  auth.py
backend/app/services/: auth_service.py
